Backport 261cb44b13e5910180a2599ca756eb7ae6f9c443